--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chart.js": "^4.5.1",
     "daisyui": "^5.5.14",
+    "framer-motion": "^12.27.5",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-chartjs-2": "^5.3.1",
